# 25.4-

C++ Skillbox/: CMakeLists.txt
C++ Skillbox/include/: physic.h
C++ Skillbox/src/: CMakeLists.txt  main.cpp  physic.cpp
Задание 1. Симулятор проведения операций/src/: main.cpp  physic.cpp
Задание 2. Проект симулятора работы компьютера/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
Задание 2. Проект симулятора работы компьютера/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
